--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -221,8 +221,8 @@
             <!-- tmpl_if can_filter_subscribers_through_blacklist --> 
                 <!-- tmpl_unless query --> 
                       <li>
-                           <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=blacklist_filter_form" class="small button">
-							   Filter Subscribers Through the Black List
+                           <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=filter_using_black_list" class="small button">
+							   Filter Subscribers Through Black List...
 						   </a>
 				     </li>
                 <!-- /tmpl_unless -->
