--- a/dada/templates/plugins/tracker/message_email_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_email_report_table.tmpl
@@ -1,12 +1,11 @@
 <!-- begin plugins/tracker/message_email_report_table.tmpl -->
 
-
-
-
 <!-- tmpl_if report --> 
 
+
+
 <div style="width:100%"> 
-    <div>
+    <div style="max-height: 480px; overflow: auto;">
 			
 	<table width="100%">
 	<tr> 
@@ -31,10 +30,9 @@
 		
 		<!-- tmpl_if expr="((type eq 'soft_bounce') || (type eq 'hard_bounce'))" -->
 			<a class="modalbox"  href="<!-- tmpl_var Bounce_Handler_URL -->?prm=cgi_bounce_score_search&query=<!-- tmpl_var email escape="URL" -->&chrome=0" title="Bounce Log for <!-- tmpl_var email escape="HTML" -->" >
-		 <!-- tmpl_var email -->
-	    </a>
+		 	   <!-- tmpl_var email -->
+	    	</a>
 		<!-- tmpl_else --> 
-			
 		<a href="#" class="message_individual_email_activity" data-email="<!-- tmpl_var email -->">
 			<!-- tmpl_if __first__  --> 
 				<span id="first_for_<!-- tmpl_var label -->"><!-- tmpl_var email --></span>
@@ -47,9 +45,7 @@
 	
 		<!-- tmpl_if count --> 
 			<td> 
-				<p>
-					<!-- tmpl_var count -->
-				</p> 
+				<!-- tmpl_var count -->
 			</td>
 		<!-- /tmpl_if --> 
 		
@@ -66,7 +62,6 @@
 </p> 
  </div>
 </div>
-
 <!-- tmpl_else --> 
 	<div class="alert-box info radius">
 		No <!-- tmpl_var title --> addresses to report.
