--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -36,8 +36,11 @@
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
 	method="post" 
 	name="default_form" 
+	id="default_form" 
 	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
 >
+
+<input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 <input type="hidden" name="process" value="1" >
 <input type="hidden" name="flavor"       value="adv_archive_options" >
 
@@ -466,15 +469,7 @@ Gravatars
 <!-- /tmpl_if -->  
 
 </fieldset> 
-
-
-
-<div class="clearfix">
-	<ul class="button-group right">
-	 <li><input type="reset"  class="button warning" value="Clear Changes"></li>
-	 <li><input type="submit" class="button success" value="Change Archive Options"></li>
-	</ul>
-</div>
+		<!-- tmpl_include common_save_list_settings_buttons_widget.tmpl -->
 </form> 
 
  
