--- a/dada/templates/archive_options_screen.tmpl
+++ b/dada/templates/archive_options_screen.tmpl
@@ -33,8 +33,10 @@
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
 	method="post" 
 	name="default_form" 
+	id="default_form" 
 	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
 >
+    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	<input type="hidden" name="process" value="1">
 	<input type="hidden" name="flavor"  value="archive_options">
 
@@ -164,16 +166,7 @@
 			</div>
 		</div>
 	</fieldset>
-	<div class="clearfix">
-		<ul class="button-group right">
-			 <li>
-				 <input type="reset"  class="warning button" value="Clear Changes">
-			 </li>
-			 <li>
-				 <input type="submit" class="success button" value="Change Archive Options">
-			 </li>
-		</ul>
-	</div>
+	<!-- tmpl_include common_save_list_settings_buttons_widget.tmpl -->
 </form> 
 
 <!-- end archive_options_screen.tmpl -->
