--- a/dada/templates/edit_html_type_screen.tmpl
+++ b/dada/templates/edit_html_type_screen.tmpl
@@ -42,8 +42,10 @@
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
 	method="post" 
 	name="default_form" 
+	id="default_form" 
 	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
 >
+    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	<input type="hidden" name="process" value="1">
 	<input type="hidden" name="flavor"  value="edit_html_type">
 	
@@ -110,17 +112,7 @@
 		><!-- tmpl_var list_settings.html_unsubscribed_message --></textarea>
 	</fieldset> 
 
-	<div class="clearfix">
-		<ul class="button-group right">
-		    <li>
-				<input type="reset" class="warning button" value="Clear All Changes">
-			</li>
-			<li>
-				<input type="submit" class="success button" value="Save All Changes">
-			</li>
-		</ul>
-	</div>
-</form>
+	<!-- tmpl_include common_save_list_settings_buttons_widget.tmpl --></form>
 
 <fieldset>
 	<legend>
