--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -30,7 +30,8 @@
 <!--/tmpl_if-->
 
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" id="default_form">
+    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
     <input type="hidden" name="process" value="1" >
     <input type="hidden" name="flavor"       value="subscription_options" >
     
@@ -340,12 +341,7 @@
 	</div> 
 </fieldset> 
 
-<div class="clearfix">
-	<ul class="button-group right">    
-		 <li><input type="reset"  class="button warning" value="Clear Changes" ></li>
-		 <li><input type="submit" class="button success" value="Save Subscription Options" ></li>
-	</ul>
-</div>
+	<!-- tmpl_include common_save_list_settings_buttons_widget.tmpl -->
 
 </form> 
 
