--- a/dada/templates/common_save_list_settings_buttons_widget.tmpl
+++ b/dada/templates/common_save_list_settings_buttons_widget.tmpl
@@ -4,9 +4,11 @@
 	<ul class="button-group right">    
 	     <li><input type="reset"  class="button warning" value="Clear" ></li>
 	     <li><input type="submit" class="button success" value="Save" ></li>
-	     <li>
-			 <!-- tmpl_include save_for_multiple_mailing_lists_button_widget.tmpl -->
-		  </li>
+		 <!-- tmpl_if root_login -->
+			 <li>
+				 <!-- tmpl_include save_for_multiple_mailing_lists_button_widget.tmpl -->
+			  </li>
+		<!-- /tmpl_if -->
 	</ul>
 </div> 
 
