--- a/dada/templates/mail_sending_advanced_options_screen.tmpl
+++ b/dada/templates/mail_sending_advanced_options_screen.tmpl
@@ -31,7 +31,10 @@
 	action="<!-- tmpl_var S_PROGRAM_URL -->" 
 	method="post" 
 	accept-charset="<!-- tmpl_var HTML_CHARSET -->"
+	name="default_form"
+	id="default_form"
 >
+    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	<input type="hidden" name="process" value="1" >
 	<input type="hidden" name="flavor"  value="mail_sending_advanced_options" >
 	
@@ -155,16 +158,8 @@
 			</div>
 		</div>
 	</fieldset> 
-	<div class="clearfix">
-		<ul class="button-group right">
-		    <li>
-				<input type="reset"  class="button warning" value="Clear Changes">
-			</li>
-			<li>
-				<input type="submit" class="button success" value="Save Changes">
-			</li>
-		</ul>
-	</div>
+	<!-- tmpl_include common_save_list_settings_buttons_widget.tmpl -->
+
 </form> 
 
 <!-- end mail_sending_advanced_options_screen.tmpl -->
