--- a/dada/templates/list/subscribed.tmpl
+++ b/dada/templates/list/subscribed.tmpl
@@ -28,7 +28,7 @@
     <form action="<!-- tmpl_var PROGRAM_URL -->" method="get">
         <input type="hidden" name="flavor" value="profile" >
         <p class="text-center">
-         <input type="submit" value="Visit Your Profle" class="success large button" > 
+         <input type="submit" value="Visit Your Profile" class="success large button" > 
 		</p>
 
 <p>		
