--- a/dada/templates/also_save_for_settings.tmpl
+++ b/dada/templates/also_save_for_settings.tmpl
@@ -1,7 +1,7 @@
 <!-- class="inline-list" -->
 
 <div>
-	<div style="max-height: 400px; overflow: auto;">
+	<div style="max-height: 375px; overflow: auto;">
 
 		<!-- <ul class="small-block-grid-3"> -->
 			<ul style="list-style-type:none">
@@ -56,7 +56,7 @@
 		</li>
 		<li>
 			<input 
-				type="button success" 
+				type="button" 
 				class="button success set_also_save_for_lists" 
 				value="Save For Selected Mailing Lists"
 			>
