--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1641,12 +1641,28 @@
 						Disable Outside Logins
 					</label>
 
-
+				
 					<label for="security_ADMIN_FLAVOR_NAME">Admin Flavor Name</label>
 					<input type="text" name="security_ADMIN_FLAVOR_NAME" id="security_ADMIN_FLAVOR_NAME" value="">			
 
 					<label for="security_SIGN_IN_FLAVOR_NAME">Sign In Flavor Name</label>
 					<input type="text" name="security_SIGN_IN_FLAVOR_NAME" id="security_SIGN_IN_FLAVOR_NAME" value="">
+				
+					<h4>
+						Session Options
+					</h4>
+					
+					<label for="security_session_params_check_matching_ip_addresses">
+						<input 
+							type="checkbox" 
+							name="security_session_params_check_matching_ip_addresses" 
+							  id="security_session_params_check_matching_ip_addresses" 
+							value="1"
+							checked="checked"
+						>			
+						Check for Matching IP Addresses
+					</label>
+					
 				
 				</div>
 			</div> 
