Adding a little warning how playing with these limits can crash and burn your list

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -424,6 +424,11 @@
 			</div> 
 		</div>
 
+		<div class="alert-box warning radius"> 
+			<strong>Warning:</strong> Setting the Soft and/or Hard Max Sizes too high will 
+			cause disruptions in processing email messages.
+		</div>
+
 		<div class="row">
 			<div class="large-6 columns">
 				<label for="msg_soft_size_limit">
