minor formatting stuff.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -709,8 +709,9 @@
 		<div id="bounce_handler_options">
 			<div class="panel">
 				<div id="bounce_handler_configuration_help" class="alert-box info radius">
-					The Bounce Handler requires a new POP3 email account to be created, in order to work correctly. Make sure the email address isn't used for 
-					any other purpose, except for the bounce handler. See the <a href="<!-- tmpl_var DOC_URL -->/bounce_handler.html"  target="_blank">documentation for this plugin</a> for additional information. 
+					The Bounce Handler requires a new POP3 email account to be created, in order to work correctly. 
+					Make sure the email address isn't used for any other purpose, except for the bounce handler. 
+					See the <a href="<!-- tmpl_var DOC_URL -->/bounce_handler.html"  target="_blank">documentation for this plugin</a> for additional information. 
 				</div> 
 
 						<div class="row">
