--- a/dada/templates/admin_menu_widget.tmpl
+++ b/dada/templates/admin_menu_widget.tmpl
@@ -45,7 +45,7 @@
             <!-- tmpl_loop SUBNAV -->
                 <!-- tmpl_unless Activated --> 
                     <!-- tmpl_if hide_nav --> 
-                        <li class="admin_menu_<!-- tmpl_var Function escape="HTML" --> hidden">
+                        <li class="admin_menu_<!-- tmpl_var Function escape="HTML" --> menu_hidden">
                     <!-- tmpl_else --> 
                         <li class="admin_menu_<!-- tmpl_var Function escape="HTML" -->">
                     <!--/tmpl_if --> 
