Work on the feature

--- a/dada/templates/list_template_header_code_block.tmpl
+++ b/dada/templates/list_template_header_code_block.tmpl
@@ -10,7 +10,7 @@
 
 
 <!-- tmpl_if include_jquery_lib --> 
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-2.1.4.min.js"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-2.1.4.min.js"></script>
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if include_app_user_js -->
@@ -32,6 +32,7 @@
 	</script>
 <!-- /tmpl_if -->
 
+<script src='https://www.google.com/recaptcha/api.js'></script>
 
 
 
