Your Mailing List -> Mailing List

--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -1,7 +1,7 @@
 <!-- begin list_options_screen.tmpl -->
 
 
-<!-- tmpl_set name="title" value="Your Mailing List &#187; Options" -->
+<!-- tmpl_set name="title" value="Mailing List &#187; Options" -->
 <!-- tmpl_set name="load_jquery_validate" value="1" -->
 
 
