Make sure these aren't cached. Sigh.

--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,7 +1,7 @@
 
 <!-- begin installer_extra_javascript_widget.tmpl --> 
 
-<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=/static/javascripts/dada_mail.js"></script>
-<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=/static/javascripts/dada_mail.installer.js"></script>
+<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=/static/javascripts/dada_mail.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=/static/javascripts/dada_mail.installer.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 	
 <!-- end installer_extra_javascript_widget.tmpl -->
