I added an id, apparently,

--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -164,6 +164,7 @@
 			<td width="225">    
 					  <select 
 					  	name="delivery_prefs . <!-- tmpl_var email escape="HTML" -->" 
+					  	id="delivery_prefs . <!-- tmpl_var email escape="HTML" -->" 
 						class="delivery_prefs" 
 						data-email="<!-- tmpl_var email escape="HTML" -->">
 							  <option 
