--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -163,8 +163,8 @@
 		<!-- tmpl_if list_settings.digest_enable -->
 			<td width="225">    
 					  <select 
-					  	name="delivery_prefs . <!-- tmpl_var email escape="HTML" -->" 
-					  	id="delivery_prefs . <!-- tmpl_var email escape="HTML" -->" 
+					  	name="delivery_prefs_<!-- tmpl_var email escape="HTML" -->" 
+					  	id="delivery_prefs_<!-- tmpl_var email escape="HTML" -->" 
 						class="delivery_prefs" 
 						data-email="<!-- tmpl_var email escape="HTML" -->">
 							  <option 
