--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1664,7 +1664,54 @@
 						Check for Matching IP Addresses
 					</label>
 					
-				
+					<h4>
+						Rate Limiting
+					</h4>
+					<label for="security_rate_limiting_enabled">
+						<input 
+							type="checkbox" 
+							name="security_rate_limiting_enabled" 
+							  id="security_rate_limiting_enabled" 
+							value="1"
+							checked="checked"
+						>			
+						Enable Rate Limiting
+					</label>
+					
+					<div class="row">
+						<div class="small-6 columns">
+							<label for="security_rate_limiting_timeframe">
+								Timeframe (in minutes): 
+							</label>
+							<select name="security_rate_limiting_timeframe" id="security_rate_limiting_timeframe">
+								<option value="1">1</option> 
+								<option value="2">2</option> 
+								<option value="3">3</option> 
+								<option value="4">4</option> 
+								<option value="5" selected="selected">5</option> 
+								<option value="10">10</option> 
+								<option value="15">15</option>
+								<option value="20">20</option> 
+							</select> 
+						</div>
+						<div class="small-6 columns">
+							<label for="security_rate_limiting_max_hits">
+								Max Hits: 
+							</label>
+							<select name="security_rate_limiting_max_hits" id="security_rate_limiting_max_hits">
+								<option value="5">5</option> 
+								<option value="10" selected="selected">10</option> 
+								<option value="15">15</option> 
+								<option value="20">20</option> 
+								<option value="25">25</option> 
+								<option value="30">30</option> 
+								<option value="40">40</option>
+								<option value="50">50</option> 
+								<option value="75">75</option> 
+								<option value="100">100</option> 
+							</select> 
+						</div>
+					</div>
 				</div>
 			</div> 
 		<!-- /tmpl_if --> 
